update one-sided fisher test to two-sided